Added code for time-aware LSTM model

--- a/Train.ipynb
+++ b/Train.ipynb
@@ -3,18 +3,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "import torch\n",
     "from torch import optim,nn\n",
     "from torch.autograd import Variable\n",
     "import numpy as np\n",
     "import time\n",
     "from models.data_loader import DataLoader\n",
-    "from models.retain_bidirectional import RETAIN"
+    "from models.retain_time import RETAIN\n",
+    "# from models.retain_bidirectional import RETAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env CUDA_DEVICE_ORDER=PCI_BUS_ID\n",
+    "%env CUDA_VISIBLE_DEVICES=3"
    ]
   },
   {
@@ -24,17 +35,12 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "%env CUDA_DEVICE_ORDER=PCI_BUS_ID\n",
-    "%env CUDA_VISIBLE_DEVICES=0"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# hyperparameters\n",
@@ -46,7 +52,7 @@
     "emb_size = 128\n",
     "hid_size = 128\n",
     "lr = 0.001\n",
-    "cuda_flag = True\n",
+    "cuda_flag = False\n",
     "\n",
     "# data loader\n",
     "D = DataLoader(batch_size=batch_size,\n",
@@ -90,8 +96,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -103,17 +108,20 @@
     "        loss_dict[file] = []\n",
     "    print(\"Epoch %d [%d, %d/%d] - opening file %s\" %(((file_cnt+1)/len_train), file_cnt, idx, len_train, D.train_list[idx]))\n",
     "    file_num = int(file.split('_')[1].split('.')[0])\n",
-    "    D.batch_size = int(20000/file_num)\n",
+    "    D.batch_size = int(10000/file_num)\n",
     "    D.load_batch_file(file)\n",
     "    loss_list = []\n",
     "    for i in range(D.batch_count):\n",
     "        cnt+=1\n",
-    "        input_list, targets = D.get_batch()\n",
+    "#         input_list, targets = D.get_batch()\n",
+    "        input_list, targets, dates = D.get_batch()\n",
+    "        dates = Variable(torch.Tensor(dates), requires_grad=False)\n",
+    "        if cuda_flag:\n",
+    "            dates = dates.cuda()\n",
     "        start = time.time()\n",
     "        inputs = model.list_to_tensor(input_list)\n",
-    "        outputs = model(inputs)\n",
+    "        outputs = model(inputs,dates)\n",
     "        targets = Variable(torch.LongTensor(targets)[:,-1]) # to only use last of each sequence\n",
-    "#             targets = Variable(torch.LongTensor(targets)).view(len(inputs),-1)[:,-1] # to only use last of each sequence\n",
     "        if cuda_flag:\n",
     "            targets = targets.cuda()\n",
     "        loss = criterion(outputs.view(-1,num_classes),targets)\n",
@@ -122,13 +130,13 @@
     "            print('[%d] %1.3f' %(cnt,loss.data[0]))\n",
     "        if cnt%500==0:\n",
     "            print(\"Saving model at %dth step\" %cnt)\n",
-    "            torch.save(model.state_dict(),'data/saved_weights/retain_bi_%d.pth'%(cnt))\n",
+    "            torch.save(model.state_dict(),'data/saved_weights/retain_time_%d.pth'%(cnt))\n",
     "            # create CPU version\n",
     "            model2 = RETAIN(emb_size,hid_size,num_classes,False)\n",
     "            if cuda_flag:\n",
     "                model.cpu()\n",
     "            model2.load_state_dict(model.state_dict())\n",
-    "            torch.save(model2.state_dict(),'data/saved_weights/retain_bi_%d_cpu.pth'%(cnt))\n",
+    "            torch.save(model2.state_dict(),'data/saved_weights/retain_time_%d_cpu.pth'%(cnt))\n",
     "            del model2\n",
     "            if cuda_flag:\n",
     "                model.cuda()\n",
@@ -177,19 +185,10 @@
    "outputs": [],
    "source": [
     "# lower learning rate\n",
-    "# lr_counter+=1\n",
+    "lr_counter+=1\n",
     "lr = lr_list[lr_counter]\n",
     "opt = optim.Adam(model.parameters(), lr=lr)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
