Changed code for time-aware LSTM model

--- a/Val.ipynb
+++ b/Val.ipynb
@@ -15,13 +15,16 @@
     "import time\n",
     "import os\n",
     "from models.data_loader import DataLoader\n",
-    "from models.retain_bidirectional import RETAIN"
+    "# from models.retain_bidirectional import RETAIN\n",
+    "from models.retain_time import RETAIN"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%env CUDA_DEVICE_ORDER=PCI_BUS_ID\n",
@@ -69,6 +72,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -93,8 +97,10 @@
     "        D.load_batch_file(file)\n",
     "        for i in range(D.batch_count):\n",
     "            cnt+=1\n",
-    "            input_list, targets = D.get_batch()\n",
-    "            print(type(targets))\n",
+    "            input_list, targets, dates = D.get_batch()\n",
+    "            dates = Variable(torch.Tensor(dates), requires_grad=False)\n",
+    "            if cuda_flag:\n",
+    "                dates = dates.cuda()\n",
     "            inputs = model.list_to_tensor(input_list)\n",
     "            outputs = model(inputs)\n",
     "            targets = torch.LongTensor(targets).view(len(inputs),-1)[:,-1] # to only use last of each sequence\n",
