Added train and val codes

--- a/Train.ipynb
+++ b/Train.ipynb
@@ -14,6 +14,7 @@
     "import numpy as np\n",
     "import time\n",
     "from models.data_loader import DataLoader\n",
+    "\n",
     "from models.retain_time import RETAIN\n",
     "# from models.retain_bidirectional import RETAIN"
    ]
@@ -25,17 +26,8 @@
    "outputs": [],
    "source": [
     "%env CUDA_DEVICE_ORDER=PCI_BUS_ID\n",
-    "%env CUDA_VISIBLE_DEVICES=3"
+    "%env CUDA_VISIBLE_DEVICES=0"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -52,7 +44,7 @@
     "emb_size = 128\n",
     "hid_size = 128\n",
     "lr = 0.001\n",
-    "cuda_flag = False\n",
+    "cuda_flag = True\n",
     "\n",
     "# data loader\n",
     "D = DataLoader(batch_size=batch_size,\n",
@@ -96,7 +88,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -108,7 +100,7 @@
     "        loss_dict[file] = []\n",
     "    print(\"Epoch %d [%d, %d/%d] - opening file %s\" %(((file_cnt+1)/len_train), file_cnt, idx, len_train, D.train_list[idx]))\n",
     "    file_num = int(file.split('_')[1].split('.')[0])\n",
-    "    D.batch_size = int(10000/file_num)\n",
+    "    D.batch_size = int(40000/file_num)\n",
     "    D.load_batch_file(file)\n",
     "    loss_list = []\n",
     "    for i in range(D.batch_count):\n",
@@ -142,14 +134,6 @@
     "                model.cuda()\n",
     "            print(\"Saving at %dth step\"%cnt)\n",
     "        # manual loss changes\n",
-    "        if cnt==100:\n",
-    "            lr_counter+=1\n",
-    "            lr = lr_list[lr_counter]\n",
-    "            opt = optim.Adam(model.parameters(),lr=lr)\n",
-    "        if cnt==500:\n",
-    "            lr_counter+=1\n",
-    "            lr = lr_list[lr_counter]\n",
-    "            opt = optim.Adam(model.parameters(),lr=lr)        \n",
     "        if loss.data[0]>10:\n",
     "            import sys\n",
     "            sys.exit()\n",
@@ -189,6 +173,15 @@
     "lr = lr_list[lr_counter]\n",
     "opt = optim.Adam(model.parameters(), lr=lr)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
