--- a/Train_copy.ipynb
+++ b/Train_copy.ipynb
@@ -86,7 +86,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "len_train = len(D.train_list)\n",
@@ -132,14 +134,6 @@
     "                model.cuda()\n",
     "            print(\"Saving at %dth step\"%cnt)\n",
     "        # manual loss changes\n",
-    "        if cnt==100:\n",
-    "            lr_counter+=1\n",
-    "            lr = lr_list[lr_counter]\n",
-    "            opt = optim.Adam(model.parameters(),lr=lr)\n",
-    "        if cnt==500:\n",
-    "            lr_counter+=1\n",
-    "            lr = lr_list[lr_counter]\n",
-    "            opt = optim.Adam(model.parameters(),lr=lr)        \n",
     "        if loss.data[0]>10:\n",
     "            import sys\n",
     "            sys.exit()\n",
@@ -158,10 +152,12 @@
    "outputs": [],
    "source": [
     "# load new model\n",
-    "model = torch.load('/home/mjc/github/EHRVis/data/saved_weights/retain_bi_14500.pth')\n",
+    "model = RETAIN(emb_size,hid_size,num_classes,cuda_flag)\n",
+    "model.release = True\n",
+    "model.load_state_dict(torch.load('/home/mjc/github/EHRVis/data/saved_weights/retain_copy_1500.pth'))\n",
     "model.train()\n",
-    "file_cnt = 4916\n",
-    "cnt = 14500"
+    "file_cnt = 704\n",
+    "cnt = 1500"
    ]
   },
   {
@@ -177,6 +173,33 @@
     "lr = lr_list[lr_counter]\n",
     "opt = optim.Adam(model.parameters(), lr=lr)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr_counter=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
