--- a/Val_copy.ipynb
+++ b/Val_copy.ipynb
@@ -16,7 +16,7 @@
     "import os\n",
     "from models.data_loader import DataLoader\n",
     "# from models.retain_bidirectional import RETAIN\n",
-    "from models.retain_time import RETAIN"
+    "from models.retain_copy import RETAIN"
    ]
   },
   {
@@ -75,9 +75,9 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "for num in np.arange(3500,15000,500):\n",
+    "for num in np.arange(1500,12500,500):\n",
     "    if cuda_flag:\n",
-    "        ver = 'retain_time_%d.pth'%num\n",
+    "        ver = 'retain_copy_%d.pth'%num\n",
     "#         ver = 'retain_bi_%d.pth'%num\n",
     "    else:\n",
     "        ver = 'retain_bi_%d_cpu.pth'%num\n",
@@ -91,16 +91,16 @@
     "    \n",
     "    for i,file in enumerate(D.val_list):\n",
     "        file_num = int(file.split('_')[1].split('.')[0])\n",
-    "        D.batch_size = int(20000/file_num)\n",
+    "        D.batch_size = int(10000/file_num)\n",
     "        D.load_batch_file(file)\n",
     "        for i in range(D.batch_count):\n",
     "            cnt+=1\n",
     "            input_list, targets, dates = D.get_batch()\n",
-    "            dates = Variable(torch.Tensor(dates), requires_grad=False)\n",
-    "            if cuda_flag:\n",
-    "                dates = dates.cuda()\n",
+    "#             dates = Variable(torch.Tensor(dates), requires_grad=False)\n",
+    "#             if cuda_flag:\n",
+    "#                 dates = dates.cuda()\n",
     "            inputs = model.list_to_tensor(input_list)\n",
-    "            outputs = model(inputs,dates)\n",
+    "            outputs = model(inputs)\n",
     "            targets = torch.LongTensor(targets).view(len(inputs),-1)[:,-1] # to only use last of each sequence\n",
     "            \n",
     "#             print(type(targets))\n",
