Modified train files

--- a/experiments/Train(retain_copy).ipynb
+++ b/experiments/Train(retain_copy).ipynb
@@ -102,7 +102,7 @@
     "        loss_dict[file] = []\n",
     "    print(\"Epoch %d [%d, %d/%d] - opening file %s\" %(((file_cnt+1)/len_train), file_cnt, idx, len_train, D.train_list[idx]))\n",
     "    file_num = int(file.split('_')[1].split('.')[0])\n",
-    "    D.batch_size = int(40000/file_num)\n",
+    "    D.batch_size = int(20000/file_num)\n",
     "    D.load_batch_file(file)\n",
     "    loss_list = []\n",
     "    for i in range(D.batch_count):\n",
@@ -132,16 +132,27 @@
     "            if cuda_flag:\n",
     "                model.cuda()\n",
     "            print(\"Saving at %dth step\"%cnt)\n",
-    "        # manual loss changes\n",
-    "        if loss.data[0]>10:\n",
-    "            import sys\n",
-    "            sys.exit()\n",
-    "#             print(loss.data[0])\n",
     "        loss.backward()\n",
     "        opt.step()\n",
+    "#         if cnt==2000:\n",
+    "#             import sys\n",
+    "#             sys.exit()\n",
     "    print(\"Loss: %1.3f\" %np.mean(loss_list))\n",
     "    loss_dict[file].append(loss.data[0])\n",
     "    file_cnt+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lower learning rate\n",
+    "lr_counter+=1\n",
+    "lr = lr_list[lr_counter]\n",
+    "opt = optim.Adam(model.parameters(), lr=lr)\n",
+    "print(lr)"
    ]
   },
   {
@@ -152,10 +163,11 @@
    },
    "outputs": [],
    "source": [
-    "# lower learning rate\n",
-    "lr_counter+=1\n",
-    "lr = lr_list[lr_counter]\n",
-    "opt = optim.Adam(model.parameters(), lr=lr)"
+    "# load new model\n",
+    "cnt = 2000\n",
+    "model.load_state_dict(torch.load('/home/mjc/github/EHRVis/data/saved_weights/retain_copy_%d.pth'%cnt))\n",
+    "model.train()\n",
+    "file_cnt = 559"
    ]
   },
   {
@@ -164,11 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load new model\n",
-    "cnt = 1500\n",
-    "model = torch.load('/home/mjc/github/EHRVis/data/saved_weights/retain_copy_%d.pth'%cnt)\n",
-    "model.train()\n",
-    "file_cnt = 4916"
+    "lr_counter=0"
    ]
   },
   {
