--- a/experiments/Train(retain_dc).ipynb
+++ b/experiments/Train(retain_dc).ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -57,7 +59,7 @@
     "model = RETAIN(emb_size,hid_size,num_classes,cuda_flag)\n",
     "model.release = True\n",
     "\n",
-    "criterion = nn.CrossEntropyLoss()\n",
+    "criterion = nn.NLLLoss()\n",
     "cnt = 0\n",
     "if cuda_flag:\n",
     "    model.cuda()\n",
@@ -100,7 +102,7 @@
     "        loss_dict[file] = []\n",
     "    print(\"Epoch %d [%d, %d/%d] - opening file %s\" %(((file_cnt+1)/len_train), file_cnt, idx, len_train, D.train_list[idx]))\n",
     "    file_num = int(file.split('_')[1].split('.')[0])\n",
-    "    D.batch_size = int(40000/file_num)\n",
+    "    D.batch_size = int(20000/file_num)\n",
     "    D.load_batch_file(file)\n",
     "    loss_list = []\n",
     "    for i in range(D.batch_count):\n",
@@ -130,13 +132,11 @@
     "            if cuda_flag:\n",
     "                model.cuda()\n",
     "            print(\"Saving at %dth step\"%cnt)\n",
-    "        # manual loss changes\n",
-    "        if loss.data[0]>10:\n",
-    "            import sys\n",
-    "            sys.exit()\n",
-    "#             print(loss.data[0])\n",
     "        loss.backward()\n",
     "        opt.step()\n",
+    "#         if cnt==2000:\n",
+    "#             import sys\n",
+    "#             sys.exit()\n",
     "    print(\"Loss: %1.3f\" %np.mean(loss_list))\n",
     "    loss_dict[file].append(loss.data[0])\n",
     "    file_cnt+=1"
@@ -145,15 +145,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for param in model.parameters():\n",
+    "    print(param)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# lower learning rate\n",
     "lr_counter+=1\n",
     "lr = lr_list[lr_counter]\n",
-    "opt = optim.Adam(model.parameters(), lr=lr)"
+    "opt = optim.Adam(model.parameters(), lr=lr)\n",
+    "print(lr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load new model\n",
+    "cnt = 5500\n",
+    "model.load_state_dict(torch.load('/home/mjc/github/EHRVis/data/saved_weights/retain_dc_%d.pth'%cnt))\n",
+    "model.train()\n",
+    "file_cnt = 1592"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr"
    ]
   },
   {
@@ -163,13 +194,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# load new model\n",
-    "cnt = 1500\n",
-    "model = torch.load('/home/mjc/github/EHRVis/data/saved_weights/retain_dc_%d.pth'%cnt)\n",
-    "model.train()\n",
-    "file_cnt = 4916"
-   ]
+   "source": []
   }
  ],
  "metadata": {
