Added changes to the preprocessing model

--- a/preprocessing/Get Pandas.ipynb
+++ b/preprocessing/Get Pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -44,16 +44,17 @@
    "outputs": [],
    "source": [
     "# for demo\n",
-    "df_demo = pd.DataFrame(columns=['jid','age','agg','gender'])\n",
+    "df_demo = pd.DataFrame(columns=['jid','agg','gender'])\n",
     "years = [2014,2015]\n",
     "months = np.arange(12)+1\n",
-    "for year in years[:1]:\n",
+    "for year in years[1:]:\n",
     "    for month in months:\n",
     "        file = '/home/data/EHR/raw/SAMPLING_NPS_200_%d.txt' %(year*100+month)\n",
     "        df = pd.read_csv(file)\n",
-    "        df = df[['JID','PAT_AGE','AGG','SEX_TP_CD']].dropna() # bits we will take\n",
-    "        df.columns = ['jid','age','agg','gender']\n",
-    "        df_demo = df_demo.append(df)"
+    "        df = df[['JID','AGG','SEX_TP_CD']].dropna() # bits we will take\n",
+    "        df.columns = ['jid','agg','gender']\n",
+    "        df_demo = df_demo.append(df)\n",
+    "df_demo = df_demo.drop_duplicates()"
    ]
   },
   {
@@ -74,10 +75,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# for main\n",
+    "df_main = pd.DataFrame(columns=['spec_id','jid','msick','msick_ab','msick_idx','date'])\n",
+    "years = [2014,2015]\n",
+    "months = np.arange(12)+1\n",
+    "for year in years[:1]:\n",
+    "    for month in months:\n",
+    "        file = '/home/data/EHR/raw/SAMPLING_NPS_200_%d.txt' %(year*100+month)\n",
+    "        df = pd.read_csv(file)\n",
+    "        # remove hospitalization cases\n",
+    "        df = df[(df['FOM_TP_CD']==31)|(df['FOM_TP_CD']==51)|(df['FOM_TP_CD']==81)|\n",
+    "           (df['FOM_TP_CD']==82)|(df['FOM_TP_CD']==83)|(df['FOM_TP_CD']==111)]\n",
+    "        df = df[['SPEC_ID_SNO','JID','MSICK_CD','RECU_TO_DD']].dropna() # bits we will take\n",
+    "        df.columns = ['spec_id','jid','msick','date']\n",
+    "        sick = [s[:3] for s in df['msick']]\n",
+    "        df['msick_ab'] = sick\n",
+    "        df['msick_idx'] = [a2i[s] for s in sick]\n",
+    "        df_main = df_main.append(df)"
+   ]
   },
   {
    "cell_type": "code",
@@ -87,20 +106,8 @@
    },
    "outputs": [],
    "source": [
-    "# for main\n",
-    "df_main = pd.DataFrame(columns=['spec_id','jid','msick','msick_ab','msick_idx','date'])\n",
-    "years = [2014,2015]\n",
-    "months = np.arange(12)+1\n",
-    "for year in years[1:]:\n",
-    "    for month in months:\n",
-    "        file = '/home/data/EHR/raw/SAMPLING_NPS_200_%d.txt' %(year*100+month)\n",
-    "        df = pd.read_csv(file)\n",
-    "        df = df[['SPEC_ID_SNO','JID','MSICK_CD','RECU_TO_DD']].dropna() # bits we will take\n",
-    "        df.columns = ['spec_id','jid','msick','date']\n",
-    "        sick = [s[:3] for s in df['msick']]\n",
-    "        df['msick_ab'] = sick\n",
-    "        df['msick_idx'] = [a2i[s] for s in sick]\n",
-    "        df_main = df_main.append(df)"
+    "with open('/home/data/EHR/db/%d_main.pckl'%year,'wb') as f:\n",
+    "    pickle.dump(df_main,f)"
    ]
   },
   {
@@ -339,37 +346,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "df_pres"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import sqlite3\n",
     "from pandas.io import sql"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "con = sqlite3.connect(':memory:')\n",
-    "cur = con.cursor()\n",
-    "con.text_factory = str"
    ]
   },
   {
@@ -432,6 +414,48 @@
     "# cur.execute('CREATE INDEX idx_pres ON pres_table(spec_id)')\n",
     "# print(time.time()-start)\n",
     "# con.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df_demo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# create database\n",
+    "import time\n",
+    "years = [2014,2015]\n",
+    "for year in years:\n",
+    "    con = sqlite3.connect('/home/data/EHR/db/%d.db'%year)\n",
+    "    cur = con.cursor()\n",
+    "    con.text_factory = str\n",
+    "    with open('/home/data/EHR/db/%d_demo.pckl'%year,'rb') as f:\n",
+    "        df_main = pickle.load(f)\n",
+    "    start = time.time()\n",
+    "    cur.execute('DROP TABLE demo_table')\n",
+    "    df_main.to_sql('demo_table',con=con)\n",
+    "    print(time.time()-start)\n",
+    "    # create indices\n",
+    "    start = time.time()\n",
+    "    cur.execute('CREATE INDEX idx_demo ON demo_table(jid)')\n",
+    "    cur.execute('CREATE INDEX idx_demo2 ON demo_table(agg,gender)')\n",
+    "    print(time.time()-start)\n",
+    "    con.commit()\n",
+    "    del df_main\n",
+    "    con.close()"
    ]
   },
   {
@@ -531,6 +555,10 @@
     "        out_dict[jid].append((id,date,input_list,msick_idx))\n",
     "        if cnt%100000==0:\n",
     "            print(cnt)\n",
+    "            \n",
+    "    # sort list by dates (only realized now that they are unsorted)\n",
+    "    out_dict[jid] = sorted(out_dict[jid], key=lambda x: x[1])\n",
+    "    \n",
     "    print(\"Save as dictionary\")\n",
     "    with open('/home/data/EHR/db/out_dict_%d.pckl'%year,'wb') as f:\n",
     "        pickle.dump(out_dict,f)\n",
@@ -542,12 +570,43 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "with open('/home/data/EHR/db/out_dict_%d.pckl'%year,'wb') as f:\n",
     "    pickle.dump(out_dict,f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "len(out_dict)"
    ]
   },
   {
