Changed Val file

--- a/Val.ipynb
+++ b/Val.ipynb
@@ -78,36 +78,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_fn = 0\n",
     "for task in task_list:\n",
     "    with open('data/%s/val.pckl'%task,'rb') as f:\n",
     "        val_data = pickle.load(f)\n",
-    "    for hid in [128]:\n",
-    "#     for hid in hid_list:\n",
+    "#     for hid in [128]:\n",
+    "    for hid in hid_list:\n",
+    "        for ver in ['ex']:\n",
+    "            for time_fn in time_list:\n",
+    "                if (time_fn==1)&(ver!='ex'):\n",
+    "                    continue\n",
     "        for ver in ver_list:\n",
-    "            if ver=='gru':\n",
-    "                model = GRU(hid,hid,1,cuda_flag=True)\n",
-    "            elif ver=='retain':\n",
-    "                model = RETAIN(hid,hid,1,cuda_flag=True)\n",
-    "            elif (ver=='ex'):\n",
-    "                model = RETAIN_EX(hid,hid,1,cuda_flag=True,bidirectional=True,time_ver=time_fn)\n",
-    "            model.cuda()\n",
-    "#             for lr in lr_list:\n",
-    "            for lr in ['0.0100']:\n",
-    "                for epoch in epoch_list[:10]:\n",
-    "                    try:\n",
-    "                        model.load_state_dict(torch.load('experiments2/%s/%s_%d_%s/saved_weights/%d_cuda.pckl'%(task,ver,hid,lr,epoch)))\n",
-    "                        correct_list = []\n",
-    "                        score_list = []\n",
-    "                        for (X,y) in val_data[:20]:\n",
-    "                            outputs,targets = calculate(X,y,model,ver=ver,cuda_flag=True,time_fn=0)\n",
-    "                            correct_list.extend(y)\n",
-    "                            score_list.extend(outputs.squeeze().data.tolist())\n",
-    "                        auc = AUC(y_true=correct_list,y_score=score_list)\n",
-    "                        ap = AP(y_true=correct_list,y_score=score_list)\n",
-    "                        print('%s,%s,%d,%s,%d,%1.3f,%1.3f'%(task,ver,hid,str(lr),epoch,auc,ap))\n",
-    "                    except FileNotFoundError:\n",
-    "                        continue"
+    "                if ver=='gru':\n",
+    "                    model = GRU(hid,hid,1,cuda_flag=True)\n",
+    "                elif ver=='retain':\n",
+    "                    model = RETAIN(hid,hid,1,cuda_flag=True)\n",
+    "                elif (ver=='ex'):\n",
+    "                    model = RETAIN_EX(hid,hid,1,cuda_flag=True,bidirectional=True,time_ver=time_fn)\n",
+    "                model.cuda()\n",
+    "                \n",
+    "                for lr in lr_list:\n",
+    "#                 for lr in ['0.001']:\n",
+    "#                     for epoch in epoch_list[:10]:\n",
+    "                    for epoch in [2]:\n",
+    "                        if ver=='ex':\n",
+    "                            weight_name = 'experiments2/%s/%s-%d_%d_%s/saved_weights/%d_cpu.pckl'%(task,ver,time_fn,hid,lr,epoch)\n",
+    "                        else:\n",
+    "                            weight_name = 'experiments2/%s/%s_%d_%s/saved_weights/%d_cpu.pckl'%(task,ver,hid,lr,epoch)\n",
+    "                        try:\n",
+    "                            model.load_state_dict(torch.load(weight_name))\n",
+    "                            correct_list = []\n",
+    "                            score_list = []\n",
+    "                            for (X,y) in val_data[:20]:\n",
+    "                                outputs,targets = calculate(X,y,model,ver=ver,cuda_flag=True,time_fn=time_fn)\n",
+    "                                correct_list.extend(y)\n",
+    "                                score_list.extend(outputs.squeeze().data.tolist())\n",
+    "                            auc = AUC(y_true=correct_list,y_score=score_list)\n",
+    "                            ap = AP(y_true=correct_list,y_score=score_list)\n",
+    "                            print('%s,%s,%d,%s,%d,%1.3f,%1.3f'%(task,ver,hid,str(lr),epoch,auc,ap))\n",
+    "                        except FileNotFoundError:\n",
+    "                            print('file not found')\n",
+    "                            continue"
    ]
   },
   {
